--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,6 @@ openio_loki_maintenance_mode: "{{ openio_maintenance_mode | d(false) }}"
 
 openio_loki_bind_address: "{{ openio_mgmt_bind_address | d(ansible_default_ipv4.address) }}"
 openio_loki_bind_port: 6902
-openio_loki_grpc_bind_address: "{{ openio_loki_bind_address }}"
-openio_loki_grpc_bind_port: 0
+openio_loki_grpc_bind_address: "127.0.0.1"
+openio_loki_grpc_bind_port: 6903
 ...
