CHANGE(loki): remove `oio-` prefix to service_type
 ##### SUMMARY
no need to have `oio-` in front of service name for monitoring

 ##### IMPACT
service name and path changes

 ##### ADDITIONAL INFORMATION

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 - include_role:
     name: openio-service
   vars:
-    openio_service_type: "oio-loki"
+    openio_service_type: "loki"
     openio_service_namespace: "{{ openio_loki_namespace }}"
     openio_service_maintenance_mode: "{{ openio_loki_maintenance_mode }}"
     openio_service_packages:
